# packages/server/CommentService/internal/adapter/storage/mongodb/repository/comment.go
@@ -77,6 +77,24 @@ func (cr *CommentRepository) GetById(ctx context.Context, id primitive.ObjectID)
 		}
 	}
 
-	return post, nil
+	if err := cursor.Err(); err != nil {
+		return nil, fmt.Errorf("%s: %w", op, err)
+	}
 
+	return post, nil
+}
+
+func (cr *CommentRepository) Delete(ctx context.Context, id primitive.ObjectID) error {
+	const op = "mongodb.repository.Delete"
+
+	collection := cr.storage.Database("DevHubDB").Collection("comments")
+
+	filter := bson.M{"_id": id}
+
+	_, err := collection.DeleteOne(context.TODO(), filter)
+	if err != nil {
+		return fmt.Errorf("%s: %w", op, err)
+	}
+
+	return nil
 }
